Update backend/src/main/java/com/example/demo/application/service/PopupService.java
Co-authored-by: 임수빈 <robin980108@naver.com>